# agent-arena

./: .env.example  .gitignore  Dockerfile  README.md  TEMP_TRIGGER.txt  config.py  main.py  pyproject.toml
.github/workflows/: deploy.yml  restart-space.yml  scheduler.yml
api/: __init__.py  minimax_client.py  search_client.py  supabase_client.py
core/: __init__.py  agent.py  analyzer.py  defi_mechanics.py  simulation.py  summarizer.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
scripts/: __init__.py  reset_db.sql  restart_space.sh  schema.sql
supabase/migrations/: 001_add_run_summaries.sql
tests/: __init__.py
web/: __init__.py  app.py
